# noir-examples

./: .gitignore  README.md  justfile
.github/workflows/: ci.yml
circuits/one/: Nargo.toml  README.md
circuits/one/client/: package-lock.json  package.json  verify.ts
circuits/smt_exclusion/: Nargo.toml  Prover.toml  README.md
circuits/smt_exclusion/client/: package-lock.json  package.json  pnpm-lock.yaml  proof.helper.ts  smt.ts  test-transfer.ts  verify.ts
circuits/smt_exclusion/on_chain_program/: Cargo.toml
circuits/smt_exclusion/on_chain_program/src/: lib.rs
circuits/smt_exclusion/src/: main.nr
circuits/verify_signer/: Nargo.toml  Prover.toml  README.md  generate_prover_values.py
circuits/verify_signer/client/: circomlibjs.d.ts  package-lock.json  package.json  pnpm-lock.yaml  proof.helper.ts  verify.ts
circuits/verify_signer/src/: main.nr
lib/: keypair.ts  package-lock.json  package.json  pnpm-lock.yaml  proof.ts  tsconfig.json  verify.ts
